# homework

./: .gitignore  dz1_run.py  dz2_1.py  rpc_client.py  rpc_server.py
additional/: notes_todo.md
additional/css/base/: style.css  style.html
additional/jinja2/: main.py
flask/: Dockerfile  app.py  config.py  database.py  docker-compose.yaml  init.sql  models.py  notes_todo.py  pyproject.toml  requirements.txt  tools.py
flask_project/: alembic.ini  app.py  docker-compose.yaml  init.sql  main.py  models.py  notes_todo.py  pyproject.toml  tools.py
flask_project/alembic/: README  env.py
flask_project/alembic/versions/: 2025_01_02_1638-08cd6b1b3283_1_migration.py  2025_01_02_1650-4ff97fe5f243_2_migration.py  2025_01_02_1654-0d8e1f28fd42_2_migration.py  2025_01_02_1655-749604f3174f_2_migration.py  2025_01_02_1655-b5dc9eb2d527_2_migration.py  2025_01_02_1656-8bfabd2d53d4_2_migration.py  2025_01_02_1701-488c301a8873_2_migration.py  2025_01_02_1752-42919678ff38_msg.py  2025_01_02_1757-75b34229e078_msg.py  2025_01_02_1800-494ce4eb5d52_msg.py  2025_01_12_1747-8c86961b1f45_msg.py
flask_project/app/: config.py  database.py  models.py  routers.py  tools.py
flask_project/app/static/css/: styles.css
flask_project/app/static/js/: expand.js
flask_project/app/templates/: base.html  course.html  courses.html  create_course.html  dialogs.html  index.html  input_form.html  ratings.html  register.html  users.html
linux_base/: dz2_2.py
oop/: dz1.py
postgres_intro/: docker-compose.yaml  init.sql
sockets/: constants.py  rpc_client.py  rpc_server.py
(+13 files in other folders)
